[gd_scene load_steps=3 format=3 uid="uid://nrsdaorpl1uv"]

[ext_resource type="Script" uid="uid://bl0voibf6bghr" path="res://scripts/combat/CombatAbilityOption.gd" id="1_j86a3"]
[ext_resource type="Texture2D" uid="uid://ctgss4sd37u0v" path="res://assets/icons/selected-icon.png" id="2_tjmgp"]

[node name="CombatAbilityOption" type="Button"]
custom_minimum_size = Vector2(0, 38)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_j86a3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -17.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectionIcon" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(34, 34)
layout_mode = 2
texture = ExtResource("2_tjmgp")

[node name="AbilityNameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ASD"

[node name="APCostLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
